--- a/requirements.txt
+++ b/requirements.txt
@@ -7,15 +7,20 @@ Flask==3.0.3
 Flask-JWT-Extended==4.6.0
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
+gunicorn==23.0.0
 idna==3.10
+iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.6
 MarkupSafe==3.0.2
 numpy==2.1.3
+packaging==24.2
 pandas==2.2.3
+pluggy==1.5.0
 psycopg2==2.9.10
 PyJWT==2.10.0
+pytest==8.3.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
@@ -26,4 +31,3 @@ typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 Werkzeug==3.1.3
-gunicorn
